// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReportGenerate actions should fetchLogs 1`] = `
Object {
  "payload": Object {
    "completed": undefined,
    "logs": Array [
      "some-logs",
    ],
  },
  "type": "YUPANA/REPORT_GENERATE_LOGS_POLLING",
}
`;

exports[`ReportGenerate actions should startProcess 1`] = `
Array [
  Array [
    Object {
      "payload": Object {
        "processID": 6,
        "status": "running",
      },
      "type": "YUPANA/REPORT_GENERATE_PROCESS_START",
    },
  ],
]
`;

exports[`ReportGenerate actions should stopProcess 1`] = `
Array [
  Array [
    Object {
      "payload": Object {
        "completed": 0,
        "logs": Array [
          "some-logs",
          "No running process",
          "--------------------",
        ],
        "status": "stopped",
      },
      "type": "YUPANA/REPORT_GENERATE_PROCESS_STOP",
    },
  ],
]
`;
